# qplot

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  Jenkinsfile  QPlot-config.cmake.in  QPlot.pc.in  README.md  conanfile.txt  qplot-config.cmake.in
cmake/: BuildInfo.cmake  CompilerConfig.cmake  EnsureBuildType.cmake  InstallConfig.cmake  OutputDirConfig.cmake  PackageConfig.cmake  QtLibraryConfig.cmake
doc/: CMakeLists.txt
documentation/: CMakeLists.txt  Doxyfile.in  groups.dox  mainpage.dox  namespaces.dox
include/QPlot/: CMakeLists.txt  Gradients.h  QPlot2D.h  QPlotAppearance.h  QPlotButton.h  QPlotDraggable.h
resources/QPlot/: CMakeLists.txt
source/: CMakeLists.txt  GradientSelector.cpp  Gradients.cpp  Gradients.h  QPlot.cpp  QPlot2D.cpp  QPlot2D.h  QPlotAppearance.cpp  QPlotButton.cpp  qplot.qrc
src/: CMakeLists.txt  TestApp.cpp  TestApp.h  TestApp.ui  TestPlot2D.cpp  TestPlot2D.h  TestPlot2D.ui  main.cpp
src/QPlot/: CMakeLists.txt  GradientSelector.cpp  GradientSelector.h  Gradients.cpp  Gradients.h  KnightRiderWidget.cpp  KnightRiderWidget.h  QPlot.cpp  QPlot.h  QPlot1D.cpp  QPlot1D.h  QPlot2D.cpp  QPlot2D.h  QPlotAppearance.cpp  QPlotAppearance.h  QPlotButton.cpp  QPlotDraggable.cpp  QPlotDraggable.h
src/QPlot/qcustomplot/: CMakeLists.txt  qcustomplot.cpp
src/QPlot/resources/: qplot.qrc
src/qplot/: GradientSelector.cpp  GradientSelector.h  QPlot.cpp  QPlot.h  QPlot1D.cpp  QPlot1D.h  QPlot2D.cpp  QPlot2D.h  QPlotButton.h  QPlotDraggable.cpp  QPlotDraggable.h  histogram.h
src/qplot/qcustomplot/: qcustomplot.h
test/: CMakeLists.txt  TestApp.cpp  TestApp.h  TestPlot2D.cpp  TestPlot2D.h  TestPlot2D.ui  TestScalar.cpp  TestScalar.h  TestScalar.ui  main.cpp
